# azure-templates

./: .env-example  .gitignore  README.md  pyproject.toml
config/: config.py
modules/azure-ml/: azure_ml_client.py
modules/azure_document_intelligence/: doc_intel_client.py
modules/azure_foundry/: azure_foundry_client.py
modules/azure_foundry/document-processing/: DocumentProcessor.py
modules/azure_ml/: azure_ml_client.py
notebooks/: example-agent-call.ipynb  example-docint.ipynb
